--- a/Lesson11/fishy.html
+++ b/Lesson11/fishy.html
@@ -136,7 +136,7 @@
             <h2 class="contact-title-fishy">Contact Information</h2>
             <div class="contact-info-fishy">
                 <div class="contact-address-fishy">
-                    <img src="images/location-icon.png" alt="location contacticons" class="location"><span>1234 Fifth Ave</span><br>
+                    <img src="images/location-icon.png" alt="location contacticons" class="location"><span class="location-fishy">1234 Fifth Ave</span><br>
                     <div class="second-row-fishy">Fish Haven, ID 89101</div>
                 </div>
                 <img src="images/email.png" class="contacticons emailicon" alt="email icon"><a href="mailto:info@prestontown.gov">info@prestontown.gov</a><br>
