--- a/Lesson11/thanks.html
+++ b/Lesson11/thanks.html
@@ -39,7 +39,7 @@
     <footer>
         <div class="footer-content">
             © <span id="NewYear"></span> | Wendy Strickland | Utah | <a href="https://www.byui.edu/online" target="_blank" class="BYUI2">BYUI Online Learning</a><br>
-            Current Date: <span id="currentdate"></span><br>
+            Current Date: <span id="currentdate"></span> | <span class="terms"><a href="https://www.termsfeed.com/live/e0e92067-5f2d-491f-bea8-eb3a8b50ed43" target="_blank" class="tc">Terms and Conditions</a></span><br>
         </div>
     </footer>
 </body>
