--- a/Lesson11/index.html
+++ b/Lesson11/index.html
@@ -38,7 +38,11 @@
             <img src="images/hero.jpg" alt="Idaho Sunset" class="hero" 
                 srcset="images/hero400.jpg 400w,
                         images/hero800.jpg 800w, 
-                        images/hero1500.jpg 1500w">
+                        images/hero1500.jpg 1500w"
+                sizes = " (max-width: 400px) 400px,
+                          (max-width: 800px) 800px,
+                          (max-width: 1500px) 1500px      
+            ">
         </picture>
         <H2 class="way2go">Things to know about Idaho</H2>
         <ul class="huh">
