--- a/Lesson11/soda.html
+++ b/Lesson11/soda.html
@@ -128,8 +128,8 @@
                     <img src="images/location-icon.png" alt="location contacticons" class="location"><span>1234 Fifth Ave</span><br>
                     <div class="second-row-preston">Sixton, SV 89101</div>
                 </div>
-                <img src="images/email.png" class="contacticons emailicon" alt="email icon"><a href="mailto:info@prestontown.gov">info@sodasprings.gov</a><br>
-                <img src="images/phone-icon.png" class="contacticons phoneicon" alt="phone icon"><a href="Tel:123-456-7890">(123)456-7890</a>
+                <img src="images/email.png" class="contacticons emailicon" alt="email icon"><a href="mailto:info@prestontown.gov" class="black">info@sodasprings.gov</a><br>
+                <img src="images/phone-icon.png" class="contacticons phoneicon" alt="phone icon"><a href="Tel:123-456-7890" class="black">(123)456-7890</a>
                 <div class="social-icons">
                     <a href="www.twitter.com"><img src="images/twitter.png" alt="twitter icon" class="social twitter"></a>
                     <a href="www.facebook.com"><img src="images/facebook.png" alt="facebook icon" class="social facebook"></a>
