--- a/Lesson11/index.html
+++ b/Lesson11/index.html
@@ -46,9 +46,9 @@
         </picture>
         <H2 class="way2go">Things to know about Idaho</H2>
         <ul class="huh">
-            <li>Soda Springs in home to the world's only captive geyser.  It was discovered 80 years ago while drilling for a swimming pool.</li>
-            <li>Preston was the site of the 1863 Bear River Massacre.  A monument was erected there to commemorate the event.</li>
-            <li>Fish Haven was originally named Rush Creek but the name was changed because of the proximity to Bear Lake and the abundent fishing there.</li>
+            <li>It may not be Dr Pepper or Diet Coke, but Soda Springs is not only known for the (only) captive geyser, don't forget to check out our Soda Sip Shop (and their secret menu....shhhhh) </li>
+            <li>If you ask the 20 Somethings what they like about Preston they may say "nothing" or that it's "small" but that small, rural community is exactly what will draw you to Preston.  Don't believe me...come see for yourself!</li>
+            <li>There are 213 people who think Fish Haven is heaven on earth, the rest of the people there are just visiting to see if it really is the heaven those residents claim.</li>
         </ul>
         <section class="soap-box">
         <article class="sodabox boxes">
