--- a/Lesson11/index.html
+++ b/Lesson11/index.html
@@ -46,7 +46,7 @@
         </picture>
         <H2 class="way2go">Things to know about Idaho</H2>
         <ul class="huh">
-            <li>It may not be Dr Pepper or Diet Coke, but Soda Springs is not only known for the (only) captive geyser, don't forget to check out our Soda Sip Shop (and their secret menu....shhhhh) </li>
+            <li>It may not be Dr Pepper or Diet Coke, but Soda Springs is not only known for the (only) captive geyser, but also for their sodas. Don't forget to check out our Soda Sip Shop (and their secret menu....shhhhh) </li>
             
             <li>If you ask the 20 Somethings what they like about Preston they may say "nothing" or that it's "small" but that small, rural community is exactly what will draw you to Preston.  Don't believe me...come see for yourself!</li>
             
