--- a/Lesson11/fishy.html
+++ b/Lesson11/fishy.html
@@ -35,7 +35,7 @@
     </nav>
     
     <main>
-        <H1><strong>Fish Haven, Idaho</strong></H1>
+        <H1 class="goFishing"><strong>Fish Haven, Idaho</strong></H1>
         <figure class="fishy-heroimage">
             <img src="images/fishy-hero-image.jpg" alt="hero"
                 srcset="images/fishy-hero-image-600.jpg 600w, 
