--- a/Lesson11/index.html
+++ b/Lesson11/index.html
@@ -45,13 +45,18 @@
             ">
         </picture>
         <H2 class="way2go">Things to know about Idaho</H2>
-        <ul class="huh">
-            <li>It may not be Dr Pepper or Diet Coke, but Soda Springs is not only known for the (only) captive geyser, but also for their sodas. Don't forget to check out our Soda Sip Shop (and their secret menu....shhhhh) </li>
+        <div class="huh">
+        <picture>
+            <img src="images/secretSodaSip.jpg" alt="Soda Sip Shop in Soda Springs" class="sip">
+        </picture>
+        <ul class="theDeets">
+            <li>It may not be named for Dr Pepper or Diet Coke, but Soda Springs is not only known for the (only) captive geyser, but also for their sodas. Don't forget to check out our Soda Sip Shop (and make sure you ask about their secret menu....shhhhh) </li>
             
             <li>If you ask the 20 Somethings what they like about Preston they may say "nothing" or that it's "small" but that small, rural community is exactly what will draw you to Preston.  Don't believe me...come see for yourself!</li>
             
             <li>There are 213 people who think Fish Haven is heaven on earth, the rest of the people there are just visiting to see if it really is the heaven those residents claim.</li>
         </ul>
+    </div>
         <section class="soap-box">
         <article class="sodabox boxes">
             <div class="soda data"></div>
