--- a/Lesson11/preston.html
+++ b/Lesson11/preston.html
@@ -40,7 +40,7 @@
     </nav>
     
     <main>
-        <H1><strong>Preston, Idaho</strong></H1>
+        <H1 class="goPreston"><strong>Preston, Idaho</strong></H1>
         <figure class="heroimage">
             <img src="images/hero-image.jpg" alt="hero"
                 srcset="images/hero-image-600.jpg 600w, 
