--- a/Lesson11/soda.html
+++ b/Lesson11/soda.html
@@ -36,7 +36,7 @@
     </nav>
     
     <main>
-        <H1><strong>Soda Springs, Idaho</strong></H1>
+        <H1 class="goSoda"><strong>Soda Springs, Idaho</strong></H1>
         <figure class="heroimage">
             <img src="images/soda-springs-hero.jpg" alt="hero"
                 srcset="images/soda-hero-600.jpg 600w, 
