--- a/Lesson11/stormcenter.html
+++ b/Lesson11/stormcenter.html
@@ -65,7 +65,7 @@
                     <label for="stormSeverity">Storm Severity<br>
                         <input id="stormSeverity" type="range"
                                 value="5" min="1" max="10" step="1" 
-                                list="tickmarks" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
+                                oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
                         <span id="ratingvalue">5</span></label>
                             <datalist id="severity">
                                 <option value="1">
