--- a/Lesson11/stormcenter.html
+++ b/Lesson11/stormcenter.html
@@ -65,9 +65,9 @@
                     <label for="stormSeverity">Storm Severity<br>
                         <input id="stormSeverity" type="range"
                                 value="5" min="1" max="10" step="1" 
-                                oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
+                                list="tickmarks" oninput="adjustRating(this.value)" onchange="adjustRating(this.value)">
                         <span id="ratingvalue">5</span></label>
-                            <datalist id="severity">
+                            <datalist id="stormSeverity">
                                 <option value="1">
                                 <option value="2">
                                 <option value="3">
