--- a/Lesson11/fishy.html
+++ b/Lesson11/fishy.html
@@ -104,6 +104,12 @@
                         </div>
                         </div>
         </div>
+        <div class="divide">
+        <div class="events fishyevents">
+            <h2>Upcoming Events</h2>
+            <div class="go2fish"></div>
+        </div>
+        <script defer src="js/fishEvents.js"></script>
         <div class="fishy-article">
             <figure class="article-image">
                 <img src="images/fishy-article.jpg" alt="Preston Idaho Sign - Est 1900"
@@ -129,6 +135,7 @@
                 The Franklin Lions Club will sell an Idaho Days dinner from 5 to 7 p.m. A lively auction of desirable items will be held, live music will be performed by regional favorite, Mason Jarr, and a celebration-ending fireworks display will be accompanied by stirring recorded music.<br>
                 <br>
                 Sponsors of the event include the City of Franklin and Franklin Lions Club. Franklin’s annual celebration of its founding was canceled last year due to the Covid-19 pandemic. Until last year, the community’s 1860 birth had been celebrated yearly since 1910.</p>
+        </div>
         </div>
     </main>
     <div class="fishy-footer1">
