--- a/Lesson11/gallery.html
+++ b/Lesson11/gallery.html
@@ -36,7 +36,7 @@
     </nav>
     
     <main>
-        <h1>Weather Gallery</h1>
+        <h1 class="goFishing">Weather Gallery</h1>
         <div class="gallery">
             <figure class="pic1 pics">
             <img src="images/placeholder.jpg" data-src="./images/optimized/narrow/Delaware-600.jpg " alt="Deleware Water Gap" class="js-lazy-load">
@@ -78,7 +78,7 @@
             <figcaption>Under the Tuscan Sun</figcaption>
         </figure>
         </div>
-        <script src="js/Lewis.js" defer></script>
+        <script src="js/lewis.js" defer></script>
     </main>    
     <footer>
         <div class="footer-content">
