--- a/Lesson11/preston.html
+++ b/Lesson11/preston.html
@@ -21,10 +21,10 @@
         Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
     </div>
     <header style="background-image: url(./images/header-big.jpg)" class="background-image">
-        <img src="images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
-        <H1 class="headerH1">Worldwide Weather Today</H1>
-        <hr class="headerHR">
-        <p class="headerP"><strong>Whether you are traveling around the block or around the world, <br>get the info you need before you go!</strong></p>
+        <img src="./images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
+            <H1 class="headerH1">Worldwide Weather Today</H1>
+            <hr class="headerHR">
+            <p class="headerP"><strong>Whether you are traveling around the block or around the world, <br>get the info you need before you go!</strong></p>
     </header>
 
     <nav>
@@ -135,6 +135,12 @@
                 <br>
                 Sponsors of the event include the City of Franklin and Franklin Lions Club. Franklin’s annual celebration of its founding was canceled last year due to the Covid-19 pandemic. Until last year, the community’s 1860 birth had been celebrated yearly since 1910.</p>
         </div>
+        <div class="events prestonevents">
+            <h2>Upcoming Events</h2>
+            <p>Check back often!  You won't want to miss one of our exciting festivals!</p>
+            <div class="go2preston"></div>
+        </div>
+        <script defer src="js/prestonEvents.js"></script>
     </main>
     <div class="footer1">
         <div class="contact-preston">
