--- a/Lesson11/stormcenter.html
+++ b/Lesson11/stormcenter.html
@@ -28,7 +28,7 @@
         <ul class="headermenu">
             <li><a class="hamburger " href="#">Menu</a></li>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./Preston10.html">Preston</a></li>
+            <li><a href="./preston.html">Preston</a></li>
             <li><a href="soda.html">Soda Springs</a></li>
             <li><a href="fishy.html"> Fish Haven</a></li>
             <li><a href="./stormcenter.html" class="active-page">Storm Center</a></li>
@@ -36,6 +36,7 @@
         </ul>
     </nav>
     <main>
+        <h1 class="goPreston"><strong>Storm Center</strong></h1>
     <form action="thanks.html">
         <div class="grid">
             <div class="form contact-storm">
