--- a/Lesson11/preston.html
+++ b/Lesson11/preston.html
@@ -14,7 +14,7 @@
     <script src="./js/year.js"></script>
     <script src="./js/preston.js"></script>
     <script defer src="js/forecast-api.js"></script>
-    <script src="./js/pancake.js"></script>
+    <script src="js/pancake.js"></script>
 </head>
 <body>
     <div class="pancake hide">
