--- a/Lesson11/preston.html
+++ b/Lesson11/preston.html
@@ -14,12 +14,12 @@
     <script src="./js/year.js"></script>
     <script src="./js/preston.js"></script>
     <script defer src="js/forecast-api.js"></script>
-    <script src="js/pancake.js"></script>
 </head>
 <body>
     <div class="pancake hide">
         Saturday = Preston Pancakes in the Park!  9:00 a.m. Saturday at the city park pavilion.
     </div>
+    <script src="js/pancake.js"></script>
     <header style="background-image: url(./images/header-big.jpg)" class="background-image">
         <img src="./images/logo-png.png" alt="Watercolor sun and snowflake combined" class="logoImage">
             <H1 class="headerH1">Worldwide Weather Today</H1>
@@ -109,6 +109,11 @@
                         </div>
                         </div>
         </div>
+        <div class="pres-da">
+            <div class="events prestonevents">
+                <h2>Upcoming Events</h2>
+                <div class="go2preston"></div>
+            </div>
         <div class="article">
             <figure class="article-image">
                 <img src="images/Preston_sign.png" alt="Preston Idaho Sign - Est 1900"
@@ -135,10 +140,6 @@
                 <br>
                 Sponsors of the event include the City of Franklin and Franklin Lions Club. Franklin’s annual celebration of its founding was canceled last year due to the Covid-19 pandemic. Until last year, the community’s 1860 birth had been celebrated yearly since 1910.</p>
         </div>
-        <div class="events prestonevents">
-            <h2>Upcoming Events</h2>
-            <p>Check back often!  You won't want to miss one of our exciting festivals!</p>
-            <div class="go2preston"></div>
         </div>
         <script defer src="js/prestonEvents.js"></script>
     </main>
