--- a/Lesson11/soda.html
+++ b/Lesson11/soda.html
@@ -105,6 +105,11 @@
                         </div>
                         </div>
         </div>
+        <div class="so-da">
+            <div class="events sodaevents">
+                <h2>Upcoming Events</h2>
+                <div class="go2soda"></div>
+            </div>
         <div class="ss-article">
             <figure class="article-image">
                 <img src="images/soda-springs-sign.jpg" alt="Preston Idaho Sign - Est 1900"
@@ -118,11 +123,6 @@
             </figure>
             <h2 class="ss-article-title">Drink Carbonated Spring Water in Soda Springs</h2>
             <p class="ss-article-content">This little Idaho town is a fun stop wherever you are on your way to. The town itself is named for the hundreds of springs dotted around the area. What makes Soda Springs unique is that the natural springs are all carbonated! You can fill up a bottle of natural sparkling water at some of the local springs like those at Hooper Springs Park. But the real draw is the man-made Soda Springs Geyser that goes off on the hour, every hour with the help of a time-released valve.</p>
-        </div>
-        <div class="so-divide">
-        <div class="events sodaevents">
-            <h2>Upcoming Events</h2>
-            <div class="go2soda"></div>
         </div>
         </div>
         <script defer src="js/sodaEvents.js"></script>
