--- a/Lesson11/thanks.html
+++ b/Lesson11/thanks.html
@@ -42,5 +42,7 @@
             Current Date: <span id="currentdate"></span> | <span class="terms"><a href="https://www.termsfeed.com/live/e0e92067-5f2d-491f-bea8-eb3a8b50ed43" target="_blank" class="tc">Terms and Conditions</a></span><br>
         </div>
     </footer>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="js/webfont.js"></script>
 </body>
 </html>
