--- a/lesson13/city.html
+++ b/lesson13/city.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Draper City  |  Chamber of Commerce  |  Home </title>
+    <title>Draper City  |  Chamber of Commerce  |  City </title>
     <meta name="description" content="Chamber of Commerce site for the city of Draper, Utah">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/normalize.css">
@@ -20,7 +20,7 @@
         </div>
         <nav role="navigation">
             <div id="menuToggle">
-                  <input type="checkbox" />
+                  <input type="checkbox">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -36,3 +36,103 @@
     </header>
 
     <main>
+        <div class="love-it">
+            <img src="images/draper-utah-temple-400.jpg" alt="Draper Temple">
+            <div class="i-love-to-see">
+                <h3>Draper, Utah Temple</h3>
+                Announced 2 October 2004<br>
+                Groundbreaking 5 August 2006<br>
+                Dedicated 20 March 2009<br>
+                <br>
+                14065 Canyon Vista Ln<br>
+                Draper, UT 84020<br>
+                (801)576-4240
+            </div>
+        </div>
+        <div class="sharks">
+            <div class="jaws">
+                <h3>Loveland Living Planet Aquarium</h3>
+                Opened in Draper March 2014<br>
+                136,000 sq/ft<br>
+                Houses 4,500 animals<br>
+                Representing 550 species<br>
+                <br>
+                12033 Lone Peak Pkwy<br>
+                Draper, UT 84020<br>
+                (801)355-3474
+            </div>
+            <img src="images/loveland-400.jpg" alt="shark tank at the Loveland Living Planet Aquarium">
+        </div>
+        <table class="whats-up-city">
+            <thead>
+                <tr>
+                    <td class="heads-up" colspan="3">Upcoming Events</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>July 17</td>
+                    <td>Draper Days Car Show</td>
+                    <td>Draper Park</td>
+                </tr>
+                <tr>
+                    <td>July 9-24</td>
+                    <td>The Lion King</td>
+                    <td>Draper Historic Theatre</td>
+                </tr>
+                <tr>
+                    <td>July 12-13</td>
+                    <td>Mountain Springs Music</td>
+                    <td>Juan Diego</td>
+                </tr>
+                <tr>
+                    <td>July 11-19</td>
+                    <td>Shark Week</td>
+                    <td>Loveland Living Planet Aquarium</td>
+                </tr>
+            </tbody>
+        </table>
+            <h3 class="center-me">City Demographics</h3>
+            <div class="demo">
+                <div class="circle1 circle">48,000<br>Population</div>
+                <div class="circle2 circle">1,000+<br>Businesses</div>
+                <div class="circle3 circle">$117,266<br>Median Income</div>
+                <div class="circle4 circle">32.9<br>Median Age</div>
+            </div>
+        <div class="history">
+            <h3>Historical Information</h3>
+            <p>When you think about Draper, you probably don't think about pioneers.  Draper is generally thought of for it's proximity to the mountain, the hiking and biking trails, and of course, the temple on the mountain.  It wasn't alway that way.  It was the mountains and especially the mountain runoff that in 1849 first attracted Ebenezer Brown to "South Willow Creek" to fatten his cattle on the long grasses growing in the area.  After the first year was successful he invited his brother in law, William Draper III and his family to the area.  In the next two years another 20 family moved to the area and it was officially called "Draperville" in honor of their first presiding elder, William Draper III.  Over the next few years the settles started to have troubles with the indigenous people and a fort was erected called "Fort Draper".  At the site of where Fort Draper once stood is now a historic park, honoring the original settlers and their resiliance in difficult times. </p>
+            <div class="history-photos">
+                <img src="images/draper-historic-park-300h.jpg" alt="Draper Historic Park" class="photo3">
+                <img src="images/draper-park-school-300h.jpg" alt="Draper Park School" class="photo2">
+                <img src="images/historic-draper-home-300h.jpg" alt="Historic Home in Draper" class="photo1">
+                <img src="images/draper-historic-home-300h.jpg" alt="A Historic Home in Draper, Utah" class="photo4">
+            </div>
+        </div>
+    </main>
+    <footer>
+       <div class="foot-flex">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d97093.69203342513!2d-111.92250593211558!3d40.49344950960342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8752805153135f0f%3A0xea3aa3af26cf70b2!2sDraper%2C%20UT!5e0!3m2!1sen!2sus!4v1626190363138!5m2!1sen!2sus" width="400" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <ul>
+            <li><strong>Contact Information</strong></li>
+            <li>1160 So Pioneeer Road</li>
+            <li>Draper, UT 84020</li>
+            <li>(801) 553-0928</li>
+        </ul>
+        <div class="be-social">
+            <a href="https://www.facebook.com/places/Things-to-do-in-Draper-Utah/105571529476024/"><img src="images/fb-logo.png" alt="facebook"></a>
+            <a href="https://www.instagram.com/drapercity/"><img src="images/ig-logo.png" alt="instagram"></a>
+        </div>
+       </div>
+    </footer>
+    <div class="sub-foot">
+        © <span id="NewYear"></span> Draper Chamber of Commerce | Wendy Strickland | WDD230<br>
+        Current Date: <span id="currentdate"></span> | <span class="terms"><a href="https://www.termsfeed.com/live/53a350ac-d1c9-471a-8ca2-25569d76a2ab" target="_blank" class="tc">Terms and Conditions</a></span><br>
+        <script src="js/year.js"></script>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="js/webfont.js"></script>    
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script src="js/webfont.js"></script>    
+</body>
+</html>
